--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -6,119 +5,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Elshadday — Bonecas de Pano Realistas</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #fdfcf8; /* fundo marfim */
-      color: #3d0066;
-      text-align: center;
-    }
-    header {
-      background-color: #d8c7f0; /* roxo claro */
-      padding: 20px;
-      border-bottom: 5px solid gold;
-    }
-    header img {
-      max-width: 200px;
-    }
-    h1 {
-      color: #3d0066;
-      margin-top: 10px;
-    }
-    h2 {
-      color: #3d0066;
-      margin-top: 30px;
-    }
-    .categorias {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 30px;
-    }
-    .card {
-      background: #fffaf0; /* fundo marfim claro */
-      border: 2px solid gold;
-      border-radius: 10px;
-      padding: 20px;
-      min-height: 200px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-    .card h3 {
-      margin: 10px 0;
-      color: #3d0066;
-    }
-    .card p {
-      color: #444;
-      font-size: 0.9rem;
-    }
-    .contatos {
-      margin: 30px auto;
-    }
-    .contatos a {
-      display: inline-block;
-      margin: 10px;
-      padding: 12px 20px;
-      text-decoration: none;
-      border-radius: 8px;
-      font-weight: bold;
-      color: white;
-    }
-    .whatsapp { background-color: #25D366; }
-    .instagram { background-color: #E1306C; }
-    .facebook { background-color: #1877F2; }
-    .email { background-color: goldenrod; }
-    footer {
-      margin-top: 40px;
-      padding: 20px;
-      background: #3d0066;
-      color: white;
-    }
-  </style>
 </head>
 <body>
-  <header>
-    <img src="1000061260.png" alt="Logo Elshadday Bonecas">
-    <h1>Elshadday Bonecas de Pano Realistas</h1>
+  <header class="header">
+    <div class="wrap">
+      <!-- LOGO -->
+      <img src="logo.png" alt="Logo Elshadday Bonecas" class="logo">
+      <h1>Elshadday Bonecas de Pano Realistas</h1>
+    </div>
   </header>
 
   <main>
-    <h2>Nossas Categorias</h2>
-    <div class="categorias">
+    <section>
+      <h2>Nossas Categorias</h2>
       <div class="card">
         <h3>Baseadas em Foto</h3>
         <p>Bonecas feitas a partir de fotos reais, com riqueza de detalhes.</p>
       </div>
       <div class="card">
-        <h3>Bonecas para Brincar</h3>
-        <p>Bonecas seguras e fofas, perfeitas para crianças.</p>
+        <h3>Para Brincar</h3>
+        <p>Bonecas estruturadas, seguras e cheias de carinho.</p>
       </div>
       <div class="card">
         <h3>Modeladas e Estruturadas</h3>
-        <p>Bonecas especiais, com estrutura e modelagem exclusiva.</p>
+        <p>Bonecas exclusivas, feitas com técnica e amor.</p>
       </div>
-      <div class="card">
-        <h3>Bonecos Temáticos</h3>
-        <p>Natal, personagens e outras criações temáticas.</p>
-      </div>
-    </div>
+    </section>
 
-    <h2>Entre em Contato</h2>
-    <div class="contatos">
-      <a class="whatsapp" href="https://wa.me/5551981071761" target="_blank">WhatsApp</a>
-      <a class="instagram" href="https://instagram.com/elshaddaybonecasdepanorealista" target="_blank">Instagram</a>
-      <a class="facebook" href="https://facebook.com/RosaGleciBalem" target="_blank">Facebook</a>
-      <a class="email" href="mailto:rosaglecibalem@gmail.com">E-mail</a>
-    </div>
+    <section>
+      <h2>Entre em Contato</h2>
+      <p>WhatsApp: <a href="https://wa.me/5551981071761" target="_blank">+55 51 98107-1761</a></p>
+      <p>Email: <a href="mailto:rosaglecibalem@gmail.com">rosaglecibalem@gmail.com</a></p>
+      <p>Instagram: <a href="https://instagram.com/elshaddaybonecasdepanorealista" target="_blank">@elshaddaybonecasdepanorealista</a></p>
+      <p>Facebook: <a href="https://facebook.com/RosaGleciBalem" target="_blank">Rosa Gleci Balem</a></p>
+    </section>
   </main>
 
   <footer>
-    <p>&copy; 2025 Elshadday Bonecas de Pano Realistas</p>
+    <p>&copy; 2025 Elshadday Bonecas Realistas. Todos os direitos reservados.</p>
   </footer>
 </body>
 </html>
+
 
               
