--- a/index.html
+++ b/index.html
@@ -8,45 +8,47 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Logo Elshadday Bonecas" class="logo fade-in">
-    <h1 class="fade-in">Elshadday Bonecas de Pano Realistas</h1>
+    <img src="logo.png" alt="Logo Elshadday Bonecas">
+    <h1>Elshadday Bonecas de Pano Realistas</h1>
   </header>
 
   <main>
-    <h2 class="fade-in">Nossas Categorias</h2>
-    <div class="categorias">
-      <div class="card fade-in">
+    <section class="categorias">
+      <h2>Nossas Categorias</h2>
+
+      <!-- Categoria 1 -->
+      <div class="categoria fade-in">
+        <img src="baseadas.jpg" alt="Boneca baseada em foto">
         <h3>Baseadas em Foto</h3>
         <p>Bonecas feitas a partir de fotos reais, com riqueza de detalhes.</p>
       </div>
-      <div class="card fade-in">
+
+      <!-- Categoria 2 -->
+      <div class="categoria fade-in">
+        <img src="brincar.jpg" alt="Boneca para brincar">
         <h3>Para Brincar</h3>
         <p>Bonecas estruturadas, seguras e cheias de carinho.</p>
       </div>
-      <div class="card fade-in">
-        <h3>Modeladas e Estruturadas</h3>
-        <p>Bonecas exclusivas, feitas com técnica e amor.</p>
-      </div>
-      <div class="card fade-in">
-        <h3>Bonecos Temáticos</h3>
-        <p>Natal, personagens e outras criações especiais.</p>
-      </div>
-    </div>
 
-    <h2 class="fade-in">Entre em Contato</h2>
-    <div class="contatos">
-      <a class="whatsapp fade-in" href="https://wa.me/5551981071761" target="_blank">WhatsApp</a>
-      <a class="instagram fade-in" href="https://instagram.com/elshaddaybonecasdepanorealista" target="_blank">Instagram</a>
-      <a class="facebook fade-in" href="https://facebook.com/RosaGleciBalem" target="_blank">Facebook</a>
-      <a class="email fade-in" href="mailto:rosaglecibalem@gmail.com">E-mail</a>
-    </div>
+      <!-- Categoria 3 -->
+      <div class="categoria fade-in">
+        <img src="modeladas.jpg" alt="Boneca modelada e estruturada">
+        <h3>Modeladas e Estruturadas</h3>
+        <p>Bonecas com design sofisticado e estrutura reforçada.</p>
+      </div>
+    </section>
   </main>
 
   <footer>
-    <p class="fade-in">&copy; 2025 Elshadday Bonecas Realistas. Todos os direitos reservados.</p>
+    <p>Contato:</p>
+    <p>
+      <a href="https://wa.me/5551981071761" target="_blank">WhatsApp</a> | 
+      <a href="mailto:rosaglecibalem@gmail.com">E-mail</a> | 
+      <a href="https://instagram.com/elshaddaybonecasdepanorealista" target="_blank">Instagram</a> | 
+      <a href="https://facebook.com/RosaGleciBalem" target="_blank">Facebook</a>
+    </p>
   </footer>
 
-  <!-- Script das animações -->
   <script src="script.js"></script>
 </body>
 </html>
