--- a/index.html
+++ b/index.html
@@ -13,37 +13,50 @@
   </header>
 
   <main>
-    <section class="categorias">
-      <h2>Nossas Categorias</h2>
-
-      <!-- Categoria 1 -->
-      <div class="categoria fade-in">
-        <img src="baseadas.jpg" alt="Boneca baseada em foto">
-        <h3>Baseadas em Foto</h3>
-        <p>Bonecas feitas a partir de fotos reais, com riqueza de detalhes.</p>
+    <section class="categoria">
+      <h2>Baseadas em Foto</h2>
+      <p>Bonecas feitas a partir de fotos reais, com riqueza de detalhes.</p>
+      <div class="galeria">
+        <img src="fotos/baseadas/foto1.jpg" alt="Boneca baseada em foto 1">
+        <img src="fotos/baseadas/foto2.jpg" alt="Boneca baseada em foto 2">
+        <img src="fotos/baseadas/foto3.jpg" alt="Boneca baseada em foto 3">
+        <img src="fotos/baseadas/foto4.jpg" alt="Boneca baseada em foto 4">
+        <img src="fotos/baseadas/foto5.jpg" alt="Boneca baseada em foto 5">
+        <img src="fotos/baseadas/foto6.jpg" alt="Boneca baseada em foto 6">
+        <img src="fotos/baseadas/foto7.jpg" alt="Boneca baseada em foto 7">
+        <img src="fotos/baseadas/foto8.jpg" alt="Boneca baseada em foto 8">
+        <img src="fotos/baseadas/foto9.jpg" alt="Boneca baseada em foto 9">
+        <img src="fotos/baseadas/foto10.jpg" alt="Boneca baseada em foto 10">
+        <img src="fotos/baseadas/foto11.jpg" alt="Boneca baseada em foto 11">
+        <img src="fotos/baseadas/foto12.jpg" alt="Boneca baseada em foto 12">
       </div>
+    </section>
 
-      <!-- Categoria 2 -->
-      <div class="categoria fade-in">
-        <img src="brincar.jpg" alt="Boneca para brincar">
-        <h3>Para Brincar</h3>
-        <p>Bonecas estruturadas, seguras e cheias de carinho.</p>
+    <section class="categoria">
+      <h2>Para Brincar</h2>
+      <p>Bonecas estruturadas, seguras e cheias de carinho.</p>
+      <div class="galeria">
+        <img src="fotos/brincar/foto1.jpg" alt="Boneca para brincar 1">
+        <img src="fotos/brincar/foto2.jpg" alt="Boneca para brincar 2">
+        <!-- ... até 12 -->
       </div>
+    </section>
 
-      <!-- Categoria 3 -->
-      <div class="categoria fade-in">
-        <img src="modeladas.jpg" alt="Boneca modelada e estruturada">
-        <h3>Modeladas e Estruturadas</h3>
-        <p>Bonecas com design sofisticado e estrutura reforçada.</p>
+    <section class="categoria">
+      <h2>Modeladas e Estruturadas</h2>
+      <p>Bonecas com acabamento refinado e estrutura detalhada.</p>
+      <div class="galeria">
+        <img src="fotos/modeladas/foto1.jpg" alt="Boneca modelada 1">
+        <img src="fotos/modeladas/foto2.jpg" alt="Boneca modelada 2">
+        <!-- ... até 12 -->
       </div>
     </section>
   </main>
 
   <footer>
-    <p>Contato:</p>
-    <p>
+    <p>Contato: 
       <a href="https://wa.me/5551981071761" target="_blank">WhatsApp</a> | 
-      <a href="mailto:rosaglecibalem@gmail.com">E-mail</a> | 
+      <a href="mailto:rosaglecibalem@gmail.com">Email</a> | 
       <a href="https://instagram.com/elshaddaybonecasdepanorealista" target="_blank">Instagram</a> | 
       <a href="https://facebook.com/RosaGleciBalem" target="_blank">Facebook</a>
     </p>
