--- a/index.html
+++ b/index.html
@@ -7,61 +7,105 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <img src="logo.png" alt="Logo Elshadday Bonecas">
+  <!-- Logo e título -->
+  <header class="fade-in">
+    <img src="logo.png" alt="Logo Elshadday Bonecas" class="logo">
     <h1>Elshadday Bonecas de Pano Realistas</h1>
   </header>
 
+  <!-- Categorias -->
   <main>
-    <section class="categoria">
-      <h2>Baseadas em Foto</h2>
-      <p>Bonecas feitas a partir de fotos reais, com riqueza de detalhes.</p>
+    <section class="fade-in">
+      <h2>Nossas Categorias</h2>
+    </section>
+
+    <!-- Baseadas em Foto -->
+    <section class="categoria fade-in">
+      <h3>Baseadas em Foto</h3>
       <div class="galeria">
-        <img src="fotos/baseadas/foto1.jpg" alt="Boneca baseada em foto 1">
-        <img src="fotos/baseadas/foto2.jpg" alt="Boneca baseada em foto 2">
-        <img src="fotos/baseadas/foto3.jpg" alt="Boneca baseada em foto 3">
-        <img src="fotos/baseadas/foto4.jpg" alt="Boneca baseada em foto 4">
-        <img src="fotos/baseadas/foto5.jpg" alt="Boneca baseada em foto 5">
-        <img src="fotos/baseadas/foto6.jpg" alt="Boneca baseada em foto 6">
-        <img src="fotos/baseadas/foto7.jpg" alt="Boneca baseada em foto 7">
-        <img src="fotos/baseadas/foto8.jpg" alt="Boneca baseada em foto 8">
-        <img src="fotos/baseadas/foto9.jpg" alt="Boneca baseada em foto 9">
-        <img src="fotos/baseadas/foto10.jpg" alt="Boneca baseada em foto 10">
-        <img src="fotos/baseadas/foto11.jpg" alt="Boneca baseada em foto 11">
-        <img src="fotos/baseadas/foto12.jpg" alt="Boneca baseada em foto 12">
+        <img src="baseadas/1.jpg" alt="Boneca baseada em foto">
+        <img src="baseadas/2.jpg" alt="Boneca baseada em foto">
+        <img src="baseadas/3.jpg" alt="Boneca baseada em foto">
+        <img src="baseadas/4.jpg" alt="Boneca baseada em foto">
+        <img src="baseadas/5.jpg" alt="Boneca baseada em foto">
+        <img src="baseadas/6.jpg" alt="Boneca baseada em foto">
+        <img src="baseadas/7.jpg" alt="Boneca baseada em foto">
+        <img src="baseadas/8.jpg" alt="Boneca baseada em foto">
+        <img src="baseadas/9.jpg" alt="Boneca baseada em foto">
+        <img src="baseadas/10.jpg" alt="Boneca baseada em foto">
+        <img src="baseadas/11.jpg" alt="Boneca baseada em foto">
+        <img src="baseadas/12.jpg" alt="Boneca baseada em foto">
       </div>
     </section>
 
-    <section class="categoria">
-      <h2>Para Brincar</h2>
-      <p>Bonecas estruturadas, seguras e cheias de carinho.</p>
+    <!-- Para Brincar -->
+    <section class="categoria fade-in">
+      <h3>Para Brincar</h3>
       <div class="galeria">
-        <img src="fotos/brincar/foto1.jpg" alt="Boneca para brincar 1">
-        <img src="fotos/brincar/foto2.jpg" alt="Boneca para brincar 2">
-        <!-- ... até 12 -->
+        <img src="brincar/1.jpg" alt="Boneca para brincar">
+        <img src="brincar/2.jpg" alt="Boneca para brincar">
+        <img src="brincar/3.jpg" alt="Boneca para brincar">
+        <img src="brincar/4.jpg" alt="Boneca para brincar">
+        <img src="brincar/5.jpg" alt="Boneca para brincar">
+        <img src="brincar/6.jpg" alt="Boneca para brincar">
+        <img src="brincar/7.jpg" alt="Boneca para brincar">
+        <img src="brincar/8.jpg" alt="Boneca para brincar">
+        <img src="brincar/9.jpg" alt="Boneca para brincar">
+        <img src="brincar/10.jpg" alt="Boneca para brincar">
+        <img src="brincar/11.jpg" alt="Boneca para brincar">
+        <img src="brincar/12.jpg" alt="Boneca para brincar">
       </div>
     </section>
 
-    <section class="categoria">
-      <h2>Modeladas e Estruturadas</h2>
-      <p>Bonecas com acabamento refinado e estrutura detalhada.</p>
+    <!-- Modeladas e Estruturadas -->
+    <section class="categoria fade-in">
+      <h3>Modeladas e Estruturadas</h3>
       <div class="galeria">
-        <img src="fotos/modeladas/foto1.jpg" alt="Boneca modelada 1">
-        <img src="fotos/modeladas/foto2.jpg" alt="Boneca modelada 2">
-        <!-- ... até 12 -->
+        <img src="modeladas/1.jpg" alt="Boneca modelada e estruturada">
+        <img src="modeladas/2.jpg" alt="Boneca modelada e estruturada">
+        <img src="modeladas/3.jpg" alt="Boneca modelada e estruturada">
+        <img src="modeladas/4.jpg" alt="Boneca modelada e estruturada">
+        <img src="modeladas/5.jpg" alt="Boneca modelada e estruturada">
+        <img src="modeladas/6.jpg" alt="Boneca modelada e estruturada">
+        <img src="modeladas/7.jpg" alt="Boneca modelada e estruturada">
+        <img src="modeladas/8.jpg" alt="Boneca modelada e estruturada">
+        <img src="modeladas/9.jpg" alt="Boneca modelada e estruturada">
+        <img src="modeladas/10.jpg" alt="Boneca modelada e estruturada">
+        <img src="modeladas/11.jpg" alt="Boneca modelada e estruturada">
+        <img src="modeladas/12.jpg" alt="Boneca modelada e estruturada">
+      </div>
+    </section>
+
+    <!-- Bonecos Temáticos -->
+    <section class="categoria fade-in">
+      <h3>Bonecos Temáticos</h3>
+      <div class="galeria">
+        <img src="tematicos/1.jpg" alt="Boneco temático">
+        <img src="tematicos/2.jpg" alt="Boneco temático">
+        <img src="tematicos/3.jpg" alt="Boneco temático">
+        <img src="tematicos/4.jpg" alt="Boneco temático">
+        <img src="tematicos/5.jpg" alt="Boneco temático">
+        <img src="tematicos/6.jpg" alt="Boneco temático">
+        <img src="tematicos/7.jpg" alt="Boneco temático">
+        <img src="tematicos/8.jpg" alt="Boneco temático">
+        <img src="tematicos/9.jpg" alt="Boneco temático">
+        <img src="tematicos/10.jpg" alt="Boneco temático">
+        <img src="tematicos/11.jpg" alt="Boneco temático">
+        <img src="tematicos/12.jpg" alt="Boneco temático">
       </div>
     </section>
   </main>
 
-  <footer>
-    <p>Contato: 
-      <a href="https://wa.me/5551981071761" target="_blank">WhatsApp</a> | 
-      <a href="mailto:rosaglecibalem@gmail.com">Email</a> | 
-      <a href="https://instagram.com/elshaddaybonecasdepanorealista" target="_blank">Instagram</a> | 
-      <a href="https://facebook.com/RosaGleciBalem" target="_blank">Facebook</a>
-    </p>
+  <!-- Contatos -->
+  <footer class="fade-in">
+    <p>Contato:</p>
+    <p>📱 WhatsApp: <a href="https://wa.me/5551981071761">51981071761</a></p>
+    <p>📧 Email: <a href="mailto:rosaglecibalem@gmail.com">rosaglecibalem@gmail.com</a></p>
+    <p>📸 Instagram: <a href="https://instagram.com/elshaddaybonecasdepanorealista">elshaddaybonecasdepanorealista</a></p>
+    <p>📘 Facebook: <a href="https://facebook.com/RosaGleciBalem">RosaGleciBalem</a></p>
   </footer>
 
   <script src="script.js"></script>
 </body>
-</html>
+  </html>
+  
