--- a/index.html
+++ b/index.html
@@ -7,105 +7,92 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Logo e título -->
-  <header class="fade-in">
+  <header class="header">
     <img src="logo.png" alt="Logo Elshadday Bonecas" class="logo">
     <h1>Elshadday Bonecas de Pano Realistas</h1>
   </header>
 
-  <!-- Categorias -->
   <main>
-    <section class="fade-in">
+    <section class="categorias">
       <h2>Nossas Categorias</h2>
-    </section>
 
-    <!-- Baseadas em Foto -->
-    <section class="categoria fade-in">
-      <h3>Baseadas em Foto</h3>
-      <div class="galeria">
-        <img src="baseadas/1.jpg" alt="Boneca baseada em foto">
-        <img src="baseadas/2.jpg" alt="Boneca baseada em foto">
-        <img src="baseadas/3.jpg" alt="Boneca baseada em foto">
-        <img src="baseadas/4.jpg" alt="Boneca baseada em foto">
-        <img src="baseadas/5.jpg" alt="Boneca baseada em foto">
-        <img src="baseadas/6.jpg" alt="Boneca baseada em foto">
-        <img src="baseadas/7.jpg" alt="Boneca baseada em foto">
-        <img src="baseadas/8.jpg" alt="Boneca baseada em foto">
-        <img src="baseadas/9.jpg" alt="Boneca baseada em foto">
-        <img src="baseadas/10.jpg" alt="Boneca baseada em foto">
-        <img src="baseadas/11.jpg" alt="Boneca baseada em foto">
-        <img src="baseadas/12.jpg" alt="Boneca baseada em foto">
+      <!-- Categoria Baseadas em Foto -->
+      <div class="categoria">
+        <h3>Baseadas em Foto</h3>
+        <div class="galeria">
+          <img src="fotos/baseadas/1.jpg" alt="Boneca baseada em foto">
+          <img src="fotos/baseadas/2.jpg" alt="Boneca baseada em foto">
+          <img src="fotos/baseadas/3.jpg" alt="Boneca baseada em foto">
+          <img src="fotos/baseadas/4.jpg" alt="Boneca baseada em foto">
+          <img src="fotos/baseadas/5.jpg" alt="Boneca baseada em foto">
+          <img src="fotos/baseadas/6.jpg" alt="Boneca baseada em foto">
+          <img src="fotos/baseadas/7.jpg" alt="Boneca baseada em foto">
+          <img src="fotos/baseadas/8.jpg" alt="Boneca baseada em foto">
+          <img src="fotos/baseadas/9.jpg" alt="Boneca baseada em foto">
+          <img src="fotos/baseadas/10.jpg" alt="Boneca baseada em foto">
+          <img src="fotos/baseadas/11.jpg" alt="Boneca baseada em foto">
+          <img src="fotos/baseadas/12.jpg" alt="Boneca baseada em foto">
+        </div>
       </div>
-    </section>
 
-    <!-- Para Brincar -->
-    <section class="categoria fade-in">
-      <h3>Para Brincar</h3>
-      <div class="galeria">
-        <img src="brincar/1.jpg" alt="Boneca para brincar">
-        <img src="brincar/2.jpg" alt="Boneca para brincar">
-        <img src="brincar/3.jpg" alt="Boneca para brincar">
-        <img src="brincar/4.jpg" alt="Boneca para brincar">
-        <img src="brincar/5.jpg" alt="Boneca para brincar">
-        <img src="brincar/6.jpg" alt="Boneca para brincar">
-        <img src="brincar/7.jpg" alt="Boneca para brincar">
-        <img src="brincar/8.jpg" alt="Boneca para brincar">
-        <img src="brincar/9.jpg" alt="Boneca para brincar">
-        <img src="brincar/10.jpg" alt="Boneca para brincar">
-        <img src="brincar/11.jpg" alt="Boneca para brincar">
-        <img src="brincar/12.jpg" alt="Boneca para brincar">
+      <!-- Categoria Para Brincar -->
+      <div class="categoria">
+        <h3>Para Brincar</h3>
+        <div class="galeria">
+          <img src="fotos/brincar/1.jpg" alt="Boneca para brincar">
+          <img src="fotos/brincar/2.jpg" alt="Boneca para brincar">
+          <img src="fotos/brincar/3.jpg" alt="Boneca para brincar">
+          <img src="fotos/brincar/4.jpg" alt="Boneca para brincar">
+          <img src="fotos/brincar/5.jpg" alt="Boneca para brincar">
+          <img src="fotos/brincar/6.jpg" alt="Boneca para brincar">
+          <img src="fotos/brincar/7.jpg" alt="Boneca para brincar">
+          <img src="fotos/brincar/8.jpg" alt="Boneca para brincar">
+          <img src="fotos/brincar/9.jpg" alt="Boneca para brincar">
+          <img src="fotos/brincar/10.jpg" alt="Boneca para brincar">
+          <img src="fotos/brincar/11.jpg" alt="Boneca para brincar">
+          <img src="fotos/brincar/12.jpg" alt="Boneca para brincar">
+        </div>
       </div>
-    </section>
 
-    <!-- Modeladas e Estruturadas -->
-    <section class="categoria fade-in">
-      <h3>Modeladas e Estruturadas</h3>
-      <div class="galeria">
-        <img src="modeladas/1.jpg" alt="Boneca modelada e estruturada">
-        <img src="modeladas/2.jpg" alt="Boneca modelada e estruturada">
-        <img src="modeladas/3.jpg" alt="Boneca modelada e estruturada">
-        <img src="modeladas/4.jpg" alt="Boneca modelada e estruturada">
-        <img src="modeladas/5.jpg" alt="Boneca modelada e estruturada">
-        <img src="modeladas/6.jpg" alt="Boneca modelada e estruturada">
-        <img src="modeladas/7.jpg" alt="Boneca modelada e estruturada">
-        <img src="modeladas/8.jpg" alt="Boneca modelada e estruturada">
-        <img src="modeladas/9.jpg" alt="Boneca modelada e estruturada">
-        <img src="modeladas/10.jpg" alt="Boneca modelada e estruturada">
-        <img src="modeladas/11.jpg" alt="Boneca modelada e estruturada">
-        <img src="modeladas/12.jpg" alt="Boneca modelada e estruturada">
+      <!-- Categoria Modeladas -->
+      <div class="categoria">
+        <h3>Modeladas e Estruturadas</h3>
+        <div class="galeria">
+          <img src="fotos/modeladas/1.jpg" alt="Boneca modelada">
+          <img src="fotos/modeladas/2.jpg" alt="Boneca modelada">
+          <img src="fotos/modeladas/3.jpg" alt="Boneca modelada">
+          <img src="fotos/modeladas/4.jpg" alt="Boneca modelada">
+          <img src="fotos/modeladas/5.jpg" alt="Boneca modelada">
+          <img src="fotos/modeladas/6.jpg" alt="Boneca modelada">
+          <img src="fotos/modeladas/7.jpg" alt="Boneca modelada">
+          <img src="fotos/modeladas/8.jpg" alt="Boneca modelada">
+          <img src="fotos/modeladas/9.jpg" alt="Boneca modelada">
+          <img src="fotos/modeladas/10.jpg" alt="Boneca modelada">
+          <img src="fotos/modeladas/11.jpg" alt="Boneca modelada">
+          <img src="fotos/modeladas/12.jpg" alt="Boneca modelada">
+        </div>
       </div>
-    </section>
 
-    <!-- Bonecos Temáticos -->
-    <section class="categoria fade-in">
-      <h3>Bonecos Temáticos</h3>
-      <div class="galeria">
-        <img src="tematicos/1.jpg" alt="Boneco temático">
-        <img src="tematicos/2.jpg" alt="Boneco temático">
-        <img src="tematicos/3.jpg" alt="Boneco temático">
-        <img src="tematicos/4.jpg" alt="Boneco temático">
-        <img src="tematicos/5.jpg" alt="Boneco temático">
-        <img src="tematicos/6.jpg" alt="Boneco temático">
-        <img src="tematicos/7.jpg" alt="Boneco temático">
-        <img src="tematicos/8.jpg" alt="Boneco temático">
-        <img src="tematicos/9.jpg" alt="Boneco temático">
-        <img src="tematicos/10.jpg" alt="Boneco temático">
-        <img src="tematicos/11.jpg" alt="Boneco temático">
-        <img src="tematicos/12.jpg" alt="Boneco temático">
+      <!-- Categoria Temáticos -->
+      <div class="categoria">
+        <h3>Bonecos Temáticos</h3>
+        <div class="galeria">
+          <img src="fotos/tematicos/1.jpg" alt="Boneco temático">
+          <img src="fotos/tematicos/2.jpg" alt="Boneco temático">
+          <img src="fotos/tematicos/3.jpg" alt="Boneco temático">
+          <img src="fotos/tematicos/4.jpg" alt="Boneco temático">
+          <img src="fotos/tematicos/5.jpg" alt="Boneco temático">
+          <img src="fotos/tematicos/6.jpg" alt="Boneco temático">
+          <img src="fotos/tematicos/7.jpg" alt="Boneco temático">
+          <img src="fotos/tematicos/8.jpg" alt="Boneco temático">
+          <img src="fotos/tematicos/9.jpg" alt="Boneco temático">
+          <img src="fotos/tematicos/10.jpg" alt="Boneco temático">
+          <img src="fotos/tematicos/11.jpg" alt="Boneco temático">
+          <img src="fotos/tematicos/12.jpg" alt="Boneco temático">
+        </div>
       </div>
+
     </section>
   </main>
-
-  <!-- Contatos -->
-  <footer class="fade-in">
-    <p>Contato:</p>
-    <p>📱 WhatsApp: <a href="https://wa.me/5551981071761">51981071761</a></p>
-    <p>📧 Email: <a href="mailto:rosaglecibalem@gmail.com">rosaglecibalem@gmail.com</a></p>
-    <p>📸 Instagram: <a href="https://instagram.com/elshaddaybonecasdepanorealista">elshaddaybonecasdepanorealista</a></p>
-    <p>📘 Facebook: <a href="https://facebook.com/RosaGleciBalem">RosaGleciBalem</a></p>
-  </footer>
-
-  <script src="script.js"></script>
 </body>
-  </html>
-  
+</html>
